--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -12,6 +12,11 @@
 
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>-->
     <style>
+
+        /*body{*/
+            /*border: 1px solid crimson;*/
+        /*}*/
+
         .modal {
             display: none;
             position: fixed;
