--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -13,8 +13,9 @@
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>-->
     <style>
 
-        /*body{*/
+        /*.bodytag{*/
             /*border: 1px solid crimson;*/
+            /*margin: auto;*/
         /*}*/
 
         .modal {
@@ -258,7 +259,7 @@
 </head>
 
 <body>
-
+<div class = "bodytag">
 
 
 
@@ -477,6 +478,7 @@
 
 <div class = "POPOVER" data-toggle="popover" data-trigger="hover" title="My Home" data-placement ="top" data-content="Germany is my home country"></div>
 
+</div>
 
 <script>
     // $('#tail').css({
