--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -203,11 +203,18 @@
         }
 
         body {
+            position: absolute;
             width: 40%;
             min-width: 200px;
             max-width: 300px;
-            margin: 1.5em auto;
+            /*margin: 1.5em auto;*/
             color: #333;
+            /*margin-left: 17%;*/
+            /*padding: 0;*/
+            border: 2px solid red;
+            /*margin-left: 25%;*/
+            left: -25%;
+            margin-left: 50%;
         }
 
         ul {
@@ -254,6 +261,7 @@
             /*left: 340px;*/
             /*z-index: -1;*/
         }
+
     </style>
 
 </head>
@@ -262,10 +270,9 @@
 <div class = "bodytag">
 
 
-
 <div class="container">
     <div class="jumbotron hidden-xs">
-        <h1 style="text-align:center">WorldWind Placemarks</h1>
+        <h1 class = "web-head" style="text-align:center">WorldWind Placemarks</h1>
     </div>
     <div class="row">
         <div class="col-sm-3">
