--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -275,6 +275,7 @@
                                 <a href="#" class="toggle">Blue Marble</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Layer Blue Marble <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -287,6 +288,8 @@
                                 <a href="#" class="toggle">Blue Marble & Landsat</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Layer Blue Marble & Landsat
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -299,6 +302,8 @@
                                 <a href="#" class="toggle">Bing Aerial with Labels</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Layer Bing Aerial with Labels
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -311,6 +316,8 @@
                                 <a href="#" class="toggle">Atmosphere</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Atmosphere
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -323,6 +330,8 @@
                                 <a href="#" class="toggle">Compass</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Compass
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -335,6 +344,8 @@
                                 <a href="#" class="toggle">Coordinates</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Coordinates
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -347,6 +358,8 @@
                                 <a href="#" class="toggle">View Controls</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle View Controls
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -356,9 +369,11 @@
                             </li>
 
                             <li>
-                                <a href="#" class="toggle">Custom Placemark</a>
+                                <a href="#" class="toggle">Custom Placemarks</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Custome Placemarks
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -371,6 +386,22 @@
                                 <a href="#" class="toggle">Placemarks</a>
                                 <div class="inner">
                                     <p>
+                                        Toggle Placemarks
+                                        <br>
+                                        <label class = "switch">
+                                            <input type="checkbox">
+                                            <span class = "slider"></span>
+                                        </label>
+                                    </p>
+                                </div>
+                            </li>
+
+                            <li>
+                                <a href="#" class="toggle">Heat Map</a>
+                                <div class="inner">
+                                    <p>
+                                        Toggle Heat Map
+                                        <br>
                                         <label class = "switch">
                                             <input type="checkbox">
                                             <span class = "slider"></span>
@@ -456,12 +487,6 @@
 </div>
 
 <script>
-    // $('#tail').css({
-    //     left:  e.pageX + 20,
-    //     top:   e.pageY
-    // });
-
-    //don't run popover until placemark object is found
 
     requirejs(['./WorldWindShim',
             './LayerManager'],
@@ -550,7 +575,6 @@
             /** Add Layer to System */
             wwd.addLayer(placemarks);
 
-            // newPlacemark.popover();
 
 
             /** Define new Custom Placemark */
@@ -602,6 +626,36 @@
             /** add placemark to layer */
             placemarks.addRenderable(otherPlacemark);
 
+
+            // Web Map Service information from NASA's Near Earth Observations WMS
+            var serviceAddress = "https://neo.sci.gsfc.nasa.gov/wms/wms?SERVICE=WMS&REQUEST=GetCapabilities&VERSION=1.3.0";
+            // Named layer displaying Average Temperature data
+            var layerName = "MOD_LSTD_CLIM_M";
+
+            // Called asynchronously to parse and create the WMS layer
+            var createLayer = function (xmlDom) {
+                // Create a WmsCapabilities object from the XML DOM
+                var wms = new WorldWind.WmsCapabilities(xmlDom);
+                // Retrieve a WmsLayerCapabilities object by the desired layer name
+                var wmsLayerCapabilities = wms.getNamedLayer(layerName);
+                // Form a configuration object from the WmsLayerCapability object
+                var wmsConfig = WorldWind.WmsLayer.formLayerConfiguration(wmsLayerCapabilities);
+                // Modify the configuration objects title property to a more user friendly title
+                wmsConfig.title = "Average Surface Temp";
+                // Create the WMS Layer from the configuration object
+                var wmsLayer = new WorldWind.WmsLayer(wmsConfig);
+
+                // Add the layers to WorldWind and update the layer manager
+                wwd.addLayer(wmsLayer);
+                layerManager.synchronizeLayerList();
+            };
+
+            // Called if an error occurs during WMS Capabilities document retrieval
+            var logError = function (jqXhr, text, exception) {
+                console.log("There was a failure retrieving the capabilities document: " + text + " exception: " + exception);
+            };
+
+            $.get(serviceAddress).done(createLayer).fail(logError);
 
 
 
@@ -833,7 +887,6 @@
             var tapRecognizer = new WorldWind.TapRecognizer(wwd, handlePick);
 
             <!--- Create a layer manager for controlling layer visibility. -->
-            // var layerManager = new LayerManager(wwd);
 
 
             console.log(wwd.layers);
