--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -141,7 +141,7 @@
         }
 
         .switch input {
-            opacity : 0;
+            opacity: 0;
             width: 0;
             height: 0;
         }
@@ -497,10 +497,10 @@
             WorldWind.Logger.setLoggingLevel(WorldWind.Logger.LEVEL_WARNING);
 
             /** Create the WorldWindow. */
-            var wwd = new WorldWind.WorldWindow("canvasOne");
+            let wwd = new WorldWind.WorldWindow("canvasOne");
 
             /** Create and add layers to the WorldWindow. */
-            var layers = [
+            let layers = [
                 /** Imagery layers. */
                 {layer: new WorldWind.BMNGLayer(), enabled: true},
                 {layer: new WorldWind.BMNGLandsatLayer(), enabled: false},
@@ -513,7 +513,7 @@
                 {layer: new WorldWind.ViewControlsLayer(wwd), enabled: true}
             ];
 
-            for (var l = 0; l < layers.length; l++) {
+            for (let l = 0; l < layers.length; l++) {
                 console.log(layers[l]);
                 layers[l].layer.enabled = layers[l].enabled;
                 wwd.addLayer(layers[l].layer);
@@ -521,14 +521,14 @@
             }
 
             /** Define Custom Placemark */
-            var canvas = document.createElement("canvas");
-            var ctx2d = canvas.getContext("2d");
-            var size = 70, c = size / 2 - 0.5,innerRadius = 0.5, outerRadius = 10;
+            let canvas = document.createElement("canvas");
+            let ctx2d = canvas.getContext("2d");
+            let size = 70, c = size / 2 - 0.5,innerRadius = 0.5, outerRadius = 10;
 
             canvas.width = size;
             canvas.height = size;
 
-            var gradient = ctx2d.createRadialGradient(c, c, innerRadius, c, c, outerRadius);
+            let gradient = ctx2d.createRadialGradient(c, c, innerRadius, c, c, outerRadius);
             gradient.addColorStop(0, 'rgb(255, 140, 140)');
             gradient.addColorStop(0.25, 'rgb(255, 189, 56)');
             gradient.addColorStop(0.50, 'rgb(231, 247, 91)');
@@ -540,7 +540,7 @@
             ctx2d.fill();
 
             /** Set placemark attributes. */
-            var newPlacemarkAttributes = new WorldWind.PlacemarkAttributes(null);
+            let newPlacemarkAttributes = new WorldWind.PlacemarkAttributes(null);
 
             /** Wrap the canvas created above in an ImageSource object to specify it as the placemarkAttributes image source. */
             newPlacemarkAttributes.imageSource = new WorldWind.ImageSource(canvas);
@@ -551,12 +551,12 @@
             newPlacemarkAttributes.imageColor = WorldWind.Color.WHITE;
 
             /** Set highlight Attributes for placemark */
-            var newHighlightAttributes = new WorldWind.PlacemarkAttributes (newPlacemarkAttributes);
+            let newHighlightAttributes = new WorldWind.PlacemarkAttributes (newPlacemarkAttributes);
             newHighlightAttributes.imageScale = 1.25;
 
             /** Create the placemark with the attributes defined above. */
-            var placemarkPosition = new WorldWind.Position(51.16, 10.36, 1e2);
-            var newPlacemark = new WorldWind.Placemark(placemarkPosition, false, newPlacemarkAttributes);
+            let placemarkPosition = new WorldWind.Position(51.16, 10.36, 1e2);
+            let newPlacemark = new WorldWind.Placemark(placemarkPosition, false, newPlacemarkAttributes);
 
             /** Draw placemark at altitude defined above, relative to the terrain. */
             newPlacemark.altitudeMode = WorldWind.RELATIVE_TO_GROUND;
@@ -565,7 +565,7 @@
             newPlacemark.highlightAttributes = newHighlightAttributes;
 
             /** Create new Layer for Custom Placemark */
-            var placemarks = new WorldWind.RenderableLayer("Custom Placemark");
+            let placemarks = new WorldWind.RenderableLayer("Custom Placemark");
 
             /** Add the placemark to the layer. */
             placemarks.addRenderable(newPlacemark);
@@ -577,14 +577,14 @@
 
             /** Define new Custom Placemark */
 
-            var newCanvas = document.createElement("canvas");
-            var newCtx2d = newCanvas.getContext("2d");
-            var newSize = 60, newC = newSize / 2 - 0.5, newInnerRadius = 0.5, newOuterRadius = 10;
+            let newCanvas = document.createElement("canvas");
+            let newCtx2d = newCanvas.getContext("2d");
+            let newSize = 60, newC = newSize / 2 - 0.5, newInnerRadius = 0.5, newOuterRadius = 10;
 
             newCanvas.width = newSize;
             newCanvas.height = newSize;
 
-            var newGradient = newCtx2d.createRadialGradient(newC, newC, newInnerRadius, newC, newC, newOuterRadius);
+            let newGradient = newCtx2d.createRadialGradient(newC, newC, newInnerRadius, newC, newC, newOuterRadius);
             newGradient.addColorStop(0, 'rgb(142, 118, 227)');
             newGradient.addColorStop(0.25, 'rgb(108, 230, 99)');
             newGradient.addColorStop(0.50, 'rgb(231, 247, 91)');
@@ -597,7 +597,7 @@
 
 
             /** Set new placemark attributes */
-            var otherPlacemarkAttributes = new WorldWind.PlacemarkAttributes(null);
+            let otherPlacemarkAttributes = new WorldWind.PlacemarkAttributes(null);
 
             /** wrap the canvas created above in an ImageSource object to specify it as the placemarkAttributes image source */
             otherPlacemarkAttributes.imageSource = new WorldWind.ImageSource(newCanvas);
@@ -608,11 +608,11 @@
             otherPlacemarkAttributes.imageColor = WorldWind.Color.WHITE;
 
             /** Set placemark highlight attributes */
-            var otherHighlightAttributes = new WorldWind.PlacemarkAttributes(otherPlacemarkAttributes);
+            let otherHighlightAttributes = new WorldWind.PlacemarkAttributes(otherPlacemarkAttributes);
             otherHighlightAttributes.imageScale = 1.25;
             /** create the placemark with the attributes defined above */
-            var otherPlacemarkPosition = new WorldWind.Position(41.451767,-74.438537, 1e2);
-            var otherPlacemark = new WorldWind.Placemark(otherPlacemarkPosition, false, otherPlacemarkAttributes);
+            let otherPlacemarkPosition = new WorldWind.Position(41.451767,-74.438537, 1e2);
+            let otherPlacemark = new WorldWind.Placemark(otherPlacemarkPosition, false, otherPlacemarkAttributes);
 
 
             /** draw placemark at altitude defined above, relative to terrain */
@@ -626,22 +626,22 @@
 
 
             // Web Map Service information from NASA's Near Earth Observations WMS
-            var serviceAddress = "https://neo.sci.gsfc.nasa.gov/wms/wms?SERVICE=WMS&REQUEST=GetCapabilities&VERSION=1.3.0";
+            let serviceAddress = "https://neo.sci.gsfc.nasa.gov/wms/wms?SERVICE=WMS&REQUEST=GetCapabilities&VERSION=1.3.0";
             // Named layer displaying Average Temperature data
-            var layerName = "MOD_LSTD_CLIM_M";
+            let layerName = "MOD_LSTD_CLIM_M";
 
             // Called asynchronously to parse and create the WMS layer
-            var createLayer = function (xmlDom) {
+            let createLayer = function (xmlDom) {
                 // Create a WmsCapabilities object from the XML DOM
-                var wms = new WorldWind.WmsCapabilities(xmlDom);
+                let wms = new WorldWind.WmsCapabilities(xmlDom);
                 // Retrieve a WmsLayerCapabilities object by the desired layer name
-                var wmsLayerCapabilities = wms.getNamedLayer(layerName);
+                let wmsLayerCapabilities = wms.getNamedLayer(layerName);
                 // Form a configuration object from the WmsLayerCapability object
-                var wmsConfig = WorldWind.WmsLayer.formLayerConfiguration(wmsLayerCapabilities);
+                let wmsConfig = WorldWind.WmsLayer.formLayerConfiguration(wmsLayerCapabilities);
                 // Modify the configuration objects title property to a more user friendly title
                 wmsConfig.title = "Average Surface Temp";
                 // Create the WMS Layer from the configuration object
-                var wmsLayer = new WorldWind.WmsLayer(wmsConfig);
+                let wmsLayer = new WorldWind.WmsLayer(wmsConfig);
 
                 // Add the layers to WorldWind and update the layer manager
                 wwd.addLayer(wmsLayer);
@@ -649,13 +649,13 @@
             };
 
             /** Create new Layer for Heat Map */
-            var AverageSurfaceTemp = new WorldWind.RenderableLayer("Average Surface Temp");
+            let AverageSurfaceTemp = new WorldWind.RenderableLayer("Average Surface Temp");
 
             /** Add Layer to System */
             wwd.addLayer(AverageSurfaceTemp);
 
             // Called if an error occurs during WMS Capabilities document retrieval
-            var logError = function (jqXhr, text, exception) {
+            let logError = function (jqXhr, text, exception) {
                 console.log("There was a failure retrieving the capabilities document: " + text + " exception: " + exception);
             };
 
@@ -665,7 +665,7 @@
 
 
             /** Define the images we'll use for the placemarks. */
-            var images = [
+            let images = [
                 "plain-black.png",
                 "plain-blue.png",
                 "plain-brown.png",
@@ -689,7 +689,7 @@
                 "castshadow-white.png"
             ];
 
-            var pinLibrary = WorldWind.configuration.baseUrl + "images/pushpins/", /** location of the image files */
+            let pinLibrary = WorldWind.configuration.baseUrl + "images/pushpins/", /** location of the image files */
                 placemark,
                 placemarkAttributes = new WorldWind.PlacemarkAttributes(null),
                 highlightAttributes,
@@ -711,7 +711,7 @@
             placemarkAttributes.leaderLineAttributes.outlineColor = WorldWind.Color.RED;
 
             /** For each placemark image, create a placemark with a label. */
-            for (var i = 0, len = images.length; i < len; i++) {
+            for (let i = 0, len = images.length; i < len; i++) {
                 /** Create the placemark and its label. */
                 placemark = new WorldWind.Placemark(new WorldWind.Position(latitude, longitude + i, 1e2), true, null);
                 placemark.label = "Placemark " + i.toString() + "\n"
@@ -744,25 +744,25 @@
 
             /** Now set up to handle picking. */
 
-            var highlightedItems = [];
-            var Span = document.getElementsByClassName("close") [0];
-            var Modal = document.getElementById("myModal");
+            let highlightedItems = [];
+            let Span = document.getElementsByClassName("close") [0];
+            let Modal = document.getElementById("myModal");
 
 
-            var POPOVER = $(".POPOVER");
+            let POPOVER = $(".POPOVER");
 
 
             /** The common pick-handling function. */
-            var handlePick = function (o) {
+            let handlePick = function (o) {
                 /** The input argument is either an Event or a TapRecognizer. Both have the same properties for determining
                  the mouse or tap location. */
-                var x = o.clientX,
+                let x = o.clientX,
                     y = o.clientY;
 
-                var redrawRequired = highlightedItems.length > 0; // must redraw if we de-highlight previously picked items
+                let redrawRequired = highlightedItems.length > 0; // must redraw if we de-highlight previously picked items
 
                 /** De-highlight any previously highlighted placemarks. */
-                for (var h = 0; h < highlightedItems.length; h++) {
+                for (let h = 0; h < highlightedItems.length; h++) {
                     highlightedItems[h].highlighted = false;
                     otherPlacemark.label = "";
 
@@ -776,7 +776,7 @@
 
                 /** Perform the pick. Must first convert from window coordinates to canvas coordinates, which are
                  relative to the upper left corner of the canvas rather than the upper left corner of the page. */
-                var pickList = wwd.pick(wwd.canvasCoordinates(x, y));
+                let pickList = wwd.pick(wwd.canvasCoordinates(x, y));
                 console.log(pickList.objects.length);
 
 
@@ -789,7 +789,7 @@
 
                 /** Highlight the items picked by simply setting their highlight flag to true. */
                 if (pickList.objects.length > 0) {
-                    for (var p = 0; p < pickList.objects.length; p++) {
+                    for (let p = 0; p < pickList.objects.length; p++) {
 
                         console.log(pickList.objects[p].userObject instanceof WorldWind.Placemark);
 
@@ -822,21 +822,21 @@
                 }
             };
 
-            var newHighlightedItems = [];
-            var otherModal = document.getElementById("myOtherModal");
-            var otherSpan = document.getElementsByClassName("otherClose") [0];
+            let newHighlightedItems = [];
+            let otherModal = document.getElementById("myOtherModal");
+            let otherSpan = document.getElementsByClassName("otherClose") [0];
 
 
-            var newHandlePick =  function (o) {
-                var newX = o.clientX,
+            let newHandlePick =  function (o) {
+                let newX = o.clientX,
                     newY = o.clientY,
                     myX = o.pageX,
                     myY = o.pageY;
 
-                var newRedrawRequired = newHighlightedItems.length > 0;
+                let newRedrawRequired = newHighlightedItems.length > 0;
                 console.log(newHighlightedItems);
 
-                for (var newH = 0; newH < newHighlightedItems.length; newH++){
+                for (let newH = 0; newH < newHighlightedItems.length; newH++){
                     newHighlightedItems[newH].highlighted = false;
                     newPlacemark.label = "";
                 }
@@ -847,13 +847,13 @@
                 });
                 newHighlightedItems = [];
 
-                var newPickList = wwd.pick(wwd.canvasCoordinates(newX, newY));
+                let newPickList = wwd.pick(wwd.canvasCoordinates(newX, newY));
 
                 if (newPickList.objects.length > 0) {
                     newRedrawRequired = true;
 
 
-                    for (var newP = 0; newP < newPickList.objects.length; newP++) {
+                    for (let newP = 0; newP < newPickList.objects.length; newP++) {
                         console.log(newPickList.objects[newP].userObject instanceof WorldWind.Placemark);
 
                         if(newPickList.objects[0].position.latitude === 51.16){
@@ -888,17 +888,17 @@
 
 
             <!--- Listen for taps on mobile devices and highlight the placemarks that the user taps.-->
-            var tapRecognizer = new WorldWind.TapRecognizer(wwd, handlePick);
+            let tapRecognizer = new WorldWind.TapRecognizer(wwd, handlePick);
 
             <!--- Create a layer manager for controlling layer visibility. -->
 
 
             console.log(wwd.layers);
             console.log(wwd.layers[8].displayName);
-            var Bob = $(".switch input");
+            let Bob = $(".switch input");
             console.log(Bob.length);
 
-            for (var w = 0; w < wwd.layers.length; w++) {
+            for (let w = 0; w < wwd.layers.length; w++) {
                 Bob[w].value = wwd.layers[w].displayName;
                 console.log(wwd.layers[w].displayName);
                 console.log(Bob[w].value);
@@ -906,7 +906,7 @@
             }
             console.log(Bob);
 
-            for (var g = 0; g < Bob.length; g++) {
+            for (let g = 0; g < Bob.length; g++) {
                 Bob[g].defaultChecked = true;
             }
 
@@ -915,20 +915,20 @@
 
             Bob.on('click', function() {
                 console.log("checked");
-                var chck =$('input[type=checkbox]:checked');
+                let chck =$('input[type=checkbox]:checked');
                 console.log(chck);
-                var newchck = $("input[type=checkbox]");
+                let newchck = $("input[type=checkbox]");
                 console.log(newchck);
 
-                for (var f = 0; f < newchck.length; f++) {
+                for (let f = 0; f < newchck.length; f++) {
                     if(newchck[f].checked === true) {
-                        for (var g = 0; g < wwd.layers.length; g++) {
+                        for (let g = 0; g < wwd.layers.length; g++) {
                             if (newchck[f].value === wwd.layers[g].displayName) {
                                 wwd.layers[g].enabled = true;
                             }
                         }
                     } else {
-                        for (var h = 0; h < wwd.layers.length; h++) {
+                        for (let h = 0; h < wwd.layers.length; h++) {
                             if (newchck[f].value === wwd.layers[h].displayName) {
                                 wwd.layers[h].enabled = false;
                             }
@@ -948,7 +948,7 @@
     $('.toggle').click(function(e) {
         e.preventDefault();
 
-        var $this = $(this);
+        let $this = $(this);
 
         if ($this.next().hasClass('show')) {
             $this.next().removeClass('show');
