--- a/examples/PlacemarksAndPicking.html
+++ b/examples/PlacemarksAndPicking.html
@@ -383,10 +383,10 @@
                             </li>
 
                             <li>
-                                <a href="#" class="toggle">Average Surface Temp</a>
+                                <a href="#" class="toggle">WMS Layer</a>
                                 <div class="inner">
                                     <p>
-                                        Toggle Average Surface Temperature
+                                        Toggle WMS Layer
                                         <br>
                                         <label class = "switch">
                                             <input type="checkbox">
@@ -626,9 +626,9 @@
 
 
             // Web Map Service information from NASA's Near Earth Observations WMS
-            let serviceAddress = "https://neo.sci.gsfc.nasa.gov/wms/wms?SERVICE=WMS&REQUEST=GetCapabilities&VERSION=1.3.0";
+            let serviceAddress = "http://aworldbridgelabs.com:8080/geoserver/ows?service=wms&version=1.3.0&request=GetCapabilities";
             // Named layer displaying Average Temperature data
-            let layerName = "MOD_LSTD_CLIM_M";
+            let layerName = "EG_test:states";
 
             // Called asynchronously to parse and create the WMS layer
             let createLayer = function (xmlDom) {
@@ -639,17 +639,17 @@
                 // Form a configuration object from the WmsLayerCapability object
                 let wmsConfig = WorldWind.WmsLayer.formLayerConfiguration(wmsLayerCapabilities);
                 // Modify the configuration objects title property to a more user friendly title
-                wmsConfig.title = "Average Surface Temp";
+                wmsConfig.title = "WMS Layer";
                 // Create the WMS Layer from the configuration object
                 let wmsLayer = new WorldWind.WmsLayer(wmsConfig);
 
                 // Add the layers to WorldWind and update the layer manager
                 wwd.addLayer(wmsLayer);
-                layerManager.synchronizeLayerList();
+                // layerManager.synchronizeLayerList();
             };
 
             /** Create new Layer for Heat Map */
-            let AverageSurfaceTemp = new WorldWind.RenderableLayer("Average Surface Temp");
+            let AverageSurfaceTemp = new WorldWind.RenderableLayer("WMS Layer");
 
             /** Add Layer to System */
             wwd.addLayer(AverageSurfaceTemp);
